# ETFRadar

./: .gitignore  README.md  docker-compose.yml  nginx.conf  使用说明.txt
.github/workflows/: build-exe.yml
backend/: build_exe.py  build_update_pack.py  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: collect.py  funds.py  shares.py
backend/app/core/: config.py  database.py  init_data.py  logging.py  scheduler.py  updater.py
backend/app/models/: models.py
backend/app/schemas/: collect.py  common.py  fund.py  share.py
backend/app/services/: analyzer.py  collector.py
backend/data/: seed.db
backend/scripts/: backfill_all_prices.py  backfill_sse_daily.py  collect_etf_shares.py  import_szse_excel.py
backend/tests/: test_updater.py
docs/: architecture.md  build-exe.md  docker-deploy.md  prd.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  api.ts  router.ts
frontend/src/views/: Dashboard.vue  Detail.vue  HelpModal.vue  Manage.vue
