[tool.poetry]
name = "etf-radar"
version = "1.3.0"
description = "ETF份额追踪应用"
authors = ["kod0212"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.110.0"
uvicorn = ">=0.29.0"
sqlalchemy = ">=2.0.0"
akshare = ">=1.14.0"
requests = ">=2.31.0"
pandas = ">=2.2.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
